[tool.poetry]
name = "wizwalker"
version = "1.0.0-alpha.11"
description = "Automation bot for wizard101"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/StarrFox/wizwalker"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.1"
aioconsole = "^0.2.1"
aiofiles = "^0.5.0"
pymem = "1.8.3"
appdirs = "^1.4.4"
click = "^7.1.2"
click_default_group = "^1.2.2"
aiomonitor = "^0.4.5"
terminaltables = "^3.1.0"
janus = "^0.6.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^3.6"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4.18"
sphinx = "^3.2.1"
sphinx_rtd_theme = "^0.5.0"

[tool.poetry.scripts]
wizwalker = "wizwalker.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
