[tool.poetry]
name = "wizwalker"
version = "2.0.0-alpha.0"
description = "Wizard101 scripting library"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/StarrFox/wizwalker"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.5.1"
pymem = "1.8.4"
appdirs = "^1.4.4"
click = "^8.0.1"
click_default_group = "^1.2.2"
terminaltables = "^3.1.0"
cmd2 = "^1.5.0"
pefile = "^2021.5.24"
regex = "^2022.1.18"
iced-x86 = "^1.17.0"

[tool.poetry.dev-dependencies]
sphinx = "^4.1.1"
sphinx-rtd-theme = "^0.5.2"

[tool.poetry.scripts]
wizwalker = "wizwalker.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
